--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "11-calendar-app-backend",
+  "name": "mpe-agenda-tecnicos-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
